CXDEVII-1453: Increased z-index so that the inplace div is no longer on top of the highlight div

--- a/structures/_user_detail.scss
+++ b/structures/_user_detail.scss
@@ -109,7 +109,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      z-index: 0;
+      z-index: 2;
       @include rem('padding', 23, 0);
       animation: slidingHighlightOnTop 1s 1 5s forwards;
       max-height: 90px !important;
